--- a/package.json
+++ b/package.json
@@ -16,9 +16,17 @@
     "react-static": "^7.0.0",
     "react-static-plugin-reach-router": "^7.0.0",
     "react-static-plugin-sitemap": "^7.0.0",
-    "react-static-plugin-source-filesystem": "^7.0.0"
+    "react-static-plugin-source-filesystem": "^7.0.0",
+    "react-static-plugin-typescript": "^7.0.0",
+    "typescript": "^3.4.3"
   },
   "devDependencies": {
+    "@types/node": "^11.13.4",
+    "@types/react": "^16.8.13",
+    "@types/reach__router": "^1.2.4",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-helmet": "^5.0.8",
+    "@types/webpack-dev-server": "^3.1.5",
     "babel-eslint": "9.x",
     "eslint": "5.x",
     "eslint-config-react-app": "^3.0.8",
