--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-static-example-basic",
+  "name": "andretorgal.com",
   "private": true,
   "scripts": {
     "start": "react-static start",
@@ -13,17 +13,17 @@
     "axios": "^0.18.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-static": "^7.0.0",
-    "react-static-plugin-reach-router": "^7.0.0",
-    "react-static-plugin-sitemap": "^7.0.0",
-    "react-static-plugin-source-filesystem": "^7.0.0",
-    "react-static-plugin-typescript": "^7.0.0",
+    "react-static": "^7.0.9",
+    "react-static-plugin-reach-router": "^7.0.8",
+    "react-static-plugin-sitemap": "^7.0.8",
+    "react-static-plugin-source-filesystem": "^7.0.8",
+    "react-static-plugin-typescript": "^7.0.8",
     "typescript": "^3.4.3"
   },
   "devDependencies": {
     "@types/node": "^11.13.4",
-    "@types/react": "^16.8.13",
     "@types/reach__router": "^1.2.4",
+    "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
     "@types/webpack-dev-server": "^3.1.5",
@@ -36,5 +36,8 @@
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-react": "7.x",
     "serve": "10.1.2"
+  },
+  "resolutions": {
+    "react-static/webpack-dev-server": "3.2.1"
   }
 }
