--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reach/router": "^1.2.1",
     "axios": "^0.18.0",
     "chokidar": "^2.1.5",
+    "dayjs": "^1.8.12",
     "gray-matter": "^4.0.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
@@ -31,6 +32,7 @@
     "remark-parse": "^6.0.3",
     "remark-rehype": "^4.0.0",
     "remark-toc": "^5.1.1",
+    "slugify": "^1.3.4",
     "strip-markdown": "^3.0.3",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.3",
