--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chokidar": "^2.1.5",
     "dayjs": "^1.8.12",
     "gray-matter": "^4.0.2",
+    "mdast-util-to-string": "^1.0.5",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-static": "^7.0.9",
@@ -32,6 +33,7 @@
     "remark-parse": "^6.0.3",
     "remark-rehype": "^4.0.0",
     "remark-toc": "^5.1.1",
+    "remark-unlink": "^2.1.1",
     "slugify": "^1.3.4",
     "strip-markdown": "^3.0.3",
     "ts-node": "^8.1.0",
