cleanup: react static config, watcher, routes, extraneuos 404 page

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,69 @@
-node_modules
-artifacts
-dist
-tmp
-yarn-error.log
-!src/node_modules
+# Project
+node_modules/
+!src/node_modules/
+artifacts/
+dist/
+tmp/
 *.scss.d.ts
+.env
+.env.*
+
+# Node
+
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+pids
+*.pid
+*.seed
+*.pid.lock
+lib-cov
+coverage
+.nyc_output
+.npm
+.eslintcache
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# OSX
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Windows
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# Edit at https://www.gitignore.io/?templates=osx,linux,windows
