--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.8.12",
     "gray-matter": "^4.0.2",
     "mdast-util-to-string": "^1.0.5",
+    "node-sass": "^4.11.0",
     "postcss-preset-env": "^6.6.0",
     "postcss-scss": "^2.0.0",
     "postcss-utilities": "^0.8.0",
@@ -26,7 +27,6 @@
     "react-dom": "^16.8.2",
     "react-static": "^7.0.9",
     "react-static-plugin-reach-router": "^7.0.8",
-    "react-static-plugin-sass": "^7.0.8",
     "react-static-plugin-sitemap": "^7.0.8",
     "react-static-plugin-source-filesystem": "^7.0.8",
     "react-static-plugin-typescript": "^7.0.8",
@@ -42,6 +42,7 @@
     "remark-rehype": "^4.0.0",
     "remark-toc": "^5.1.1",
     "remark-unlink": "^2.1.1",
+    "sass-loader": "^7.1.0",
     "slugify": "^1.3.4",
     "strip-markdown": "^3.0.3",
     "ts-node": "^8.1.0",
@@ -50,6 +51,7 @@
     "unified": "^7.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
     "@types/node": "^11.13.4",
     "@types/reach__router": "^1.2.4",
     "@types/react": "^16.8.13",
@@ -57,7 +59,9 @@
     "@types/react-helmet": "^5.0.8",
     "@types/rehype-react": "^3.1.0",
     "@types/webpack-dev-server": "^3.1.5",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "9.x",
+    "babel-loader": "^8.0.5",
     "eslint": "5.x",
     "eslint-config-react-app": "^3.0.8",
     "eslint-config-react-tools": "1.x.x",
@@ -65,6 +69,8 @@
     "eslint-plugin-import": "2.x",
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-react": "7.x",
+    "react-docgen-typescript-loader": "^3.1.0",
+    "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "serve": "10.1.2",
     "stylelint": "^10.0.1",
     "stylelint-config-standard": "^18.3.0",
