--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@reach/router": "^1.2.1",
     "axios": "^0.18.0",
     "chokidar": "^2.1.5",
     "css-loader": "^2.1.1",
@@ -27,8 +26,9 @@
     "postcss-utilities": "^0.8.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-router-dom": "^5.0.0",
     "react-static": "^7.0.9",
-    "react-static-plugin-reach-router": "^7.0.8",
+    "react-static-plugin-react-router": "^7.0.10",
     "react-static-plugin-sitemap": "^7.0.8",
     "react-static-plugin-source-filesystem": "^7.0.8",
     "react-static-plugin-typescript": "^7.0.8",
@@ -64,6 +64,8 @@
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.2",
     "@types/rehype-react": "^3.1.0",
     "@types/storybook__addon-actions": "^3.4.2",
     "@types/storybook__addon-info": "^4.1.1",
