update deps, config stylelint, eslint, tslint; failed to update react-static to 7.0.10

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "scripts": {
     "start": "node -r ts-node/register node_modules/.bin/react-static start",
     "clean": "find . -name '*.scss.d.ts' -type f -delete && rm -rf artifacts/ dist/ tmp/",
-    "lint": "npm lint-style",
-    "lint-style": "stylelint --cache 'src/**/*.scss'",
+    "lint": "npm run lint-style && npm run lint-es && npm run lint-ts",
+    "lint-style": "stylelint 'src/**/*.scss' --syntax scss --cache --cache-location ./tmp/stylelint.cache",
+    "lint-es": "eslint --ext .js .react-static/ .webpack/ *.js --cache --cache-location ./tmp/eslint.cache",
+    "lint-ts": "tslint -p tsconfig.json",
+    "lint-fix": "npm run lint-style -- --fix && npm run lint-es -- --fix && npm run lint-ts -- --fix ",
     "stage": "export BUILD_STAGE=stage && node -r ts-node/register node_modules/.bin/react-static build --staging",
     "build": "export BUILD_STAGE=prod && node -r ts-node/register node_modules/.bin/react-static build",
     "analyze": "export BUILD_STAGE=prod && node -r ts-node/register node_modules/.bin/react-static build --analyze",
@@ -15,23 +18,23 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "chokidar": "^2.1.5",
+    "chokidar": "^2.1.6",
     "css-loader": "^2.1.1",
-    "dayjs": "^1.8.12",
+    "dayjs": "^1.8.14",
     "gray-matter": "^4.0.2",
     "mdast-util-to-string": "^1.0.5",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "postcss-preset-env": "^6.6.0",
     "postcss-scss": "^2.0.0",
-    "postcss-utilities": "^0.8.0",
+    "postcss-utilities": "^0.8.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-router-dom": "^5.0.0",
-    "react-static": "^7.0.9",
-    "react-static-plugin-react-router": "^7.0.10",
-    "react-static-plugin-sitemap": "^7.0.8",
-    "react-static-plugin-source-filesystem": "^7.0.8",
-    "react-static-plugin-typescript": "^7.0.8",
+    "react-static": "7.0.9",
+    "react-static-plugin-react-router": "^7.0.9",
+    "react-static-plugin-sitemap": "^7.0.9",
+    "react-static-plugin-source-filesystem": "^7.0.9",
+    "react-static-plugin-typescript": "^7.0.9",
     "rehype-autolink-headings": "^2.0.4",
     "rehype-highlight": "^2.2.1",
     "rehype-raw": "^4.0.0",
@@ -49,22 +52,21 @@
     "strip-markdown": "^3.0.3",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.3",
-    "typings-for-css-modules-loader": "git://github.com/andrezero/typings-for-css-modules-loader.git#e9a04758156a04c177a0d458e24b60968af0a5cf",
     "unified": "^7.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@storybook/addon-actions": "^5.0.10",
-    "@storybook/addon-info": "^5.0.10",
-    "@storybook/addon-links": "^5.0.10",
-    "@storybook/addons": "^5.0.10",
-    "@storybook/react": "^5.0.10",
-    "@types/node": "^11.13.4",
-    "@types/react": "^16.8.13",
+    "@babel/core": "^7.4.4",
+    "@storybook/addon-actions": "^5.0.11",
+    "@storybook/addon-info": "^5.0.11",
+    "@storybook/addon-links": "^5.0.11",
+    "@storybook/addons": "^5.0.11",
+    "@storybook/react": "^5.0.11",
+    "@types/node": "^11.13.10",
+    "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
     "@types/react-helmet": "^5.0.8",
     "@types/react-router": "^4.4.5",
-    "@types/react-router-dom": "^4.3.2",
+    "@types/react-router-dom": "^4.3.3",
     "@types/rehype-react": "^3.1.0",
     "@types/storybook__addon-actions": "^3.4.2",
     "@types/storybook__addon-info": "^4.1.1",
@@ -73,26 +75,26 @@
     "@types/webpack-dev-server": "^3.1.5",
     "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "9.x",
-    "babel-loader": "^8.0.5",
-    "eslint": "5.x",
-    "eslint-config-react-app": "^3.0.8",
-    "eslint-config-react-tools": "1.x.x",
-    "eslint-plugin-flowtype": "2.x",
-    "eslint-plugin-import": "2.x",
-    "eslint-plugin-jsx-a11y": "6.x",
-    "eslint-plugin-react": "7.x",
+    "babel-loader": "^8.0.6",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
     "react-docgen-typescript-loader": "^3.1.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "serve": "10.1.2",
     "stylelint": "^10.0.1",
+    "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-config-standard": "^18.3.0",
+    "stylelint-scss": "^3.6.1",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.0.0"
   },
   "resolutions": {
-    "react-static/webpack-dev-server": "3.2.1",
-    "react-static/css-loader": "1.0.1"
+    "react-static/webpack-dev-server": "3.2.1"
   },
   "browserslist": [
     "last 2 years",
