--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "andretorgal.com",
   "private": true,
   "scripts": {
-    "start": "node -r ts-node/register node_modules/.bin/react-static start",
+    "react-static": "node -r ts-node/register node_modules/.bin/react-static start",
+    "start": "concurrently --kill-others 'serve ../andretorgal.statics -p 3333' 'npm run react-static'",
     "clean": "find . -name '*.scss.d.ts' -type f -delete && rm -rf artifacts/ dist/ tmp/",
     "lint": "npm run lint-style && npm run lint-es && npm run lint-ts",
     "lint-style": "stylelint 'src/**/*.scss' --syntax scss --cache --cache-location ./tmp/stylelint.cache",
@@ -19,8 +20,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chokidar": "^2.1.6",
+    "concurrently": "^4.1.0",
     "css-loader": "^2.1.1",
     "dayjs": "^1.8.14",
+    "fs-extra-promise": "^1.0.1",
     "gray-matter": "^4.0.2",
     "mdast-util-to-string": "^1.0.5",
     "node-sass": "^4.12.0",
@@ -50,6 +53,7 @@
     "remark-toc": "^5.1.1",
     "remark-unlink": "^2.1.1",
     "sass-loader": "^7.1.0",
+    "sharp": "^0.22.1",
     "slugify": "^1.3.4",
     "strip-markdown": "^3.0.3",
     "ts-node": "^8.1.0",
@@ -65,6 +69,7 @@
     "@storybook/addon-links": "^5.0.11",
     "@storybook/addons": "^5.0.11",
     "@storybook/react": "^5.0.11",
+    "@types/fs-extra-promise": "^1.0.7",
     "@types/node": "^11.13.10",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
@@ -72,6 +77,7 @@
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.3",
     "@types/rehype-react": "^3.1.0",
+    "@types/sharp": "^0.22.2",
     "@types/storybook__addon-actions": "^3.4.2",
     "@types/storybook__addon-info": "^4.1.1",
     "@types/storybook__addon-links": "^3.3.4",
@@ -88,7 +94,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "react-docgen-typescript-loader": "^3.1.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
-    "serve": "10.1.2",
+    "serve": "11.0.0",
     "stylelint": "^10.0.1",
     "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-config-standard": "^18.3.0",
