assets: refactor markdown, kill variants; responsive print

--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "andretorgal.com",
   "private": true,
   "scripts": {
-    "react-static": "node -r ts-node/register node_modules/.bin/react-static start",
-    "start": "concurrently --kill-others 'serve ../andretorgal.statics -p 3333' 'npm run react-static'",
+    "dev": "node -r ts-node/register node_modules/.bin/react-static start",
+    "serve-statics": "serve ../andretorgal.statics/ -p 3333",
+    "start": "concurrently --kill-others 'yarn serve-statics' 'yarn dev'",
     "clean": "find . -name '*.scss.d.ts' -type f -delete && rm -rf artifacts/ dist/ tmp/",
-    "lint": "npm run lint-style && npm run lint-es && npm run lint-ts",
+    "lint": "yarn lint-style && yarn lint-es && yarn lint-ts",
     "lint-style": "stylelint 'src/**/*.scss' --syntax scss --cache --cache-location ./tmp/stylelint.cache",
     "lint-es": "eslint --ext .js .react-static/ .webpack/ *.js --cache --cache-location ./tmp/eslint.cache",
     "lint-ts": "tsc --noEmit && tslint -p tsconfig.json --exclude '**/*.d.ts'",
-    "lint-fix": "npm run lint-style -- --fix && npm run lint-es -- --fix && npm run lint-ts -- --fix ",
+    "lint-fix": "yarn lint-style --fix && yarn lint-es --fix && yarn lint-ts --fix ",
     "stage": "export BUILD_STAGE=stage && node -r ts-node/register node_modules/.bin/react-static build --staging",
     "build": "export BUILD_STAGE=prod && node -r ts-node/register node_modules/.bin/react-static build",
     "analyze": "export BUILD_STAGE=prod && node -r ts-node/register node_modules/.bin/react-static build --analyze",
