content: iterate on blog posts; index tags

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,13 @@
     "**/tmp": true
   },
   "files.trimTrailingWhitespace": true,
-  "files.insertFinalNewline": true
+  "files.insertFinalNewline": true,
+  "spellright.language": [
+    "en"
+  ],
+  "spellright.documentTypes": [
+    "markdown",
+    "latex",
+    "plaintext"
+  ]
 }
