--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "lint-es": "eslint --ext .js .react-static/ .webpack/ *.js --cache --cache-location ./tmp/eslint.cache",
     "lint-ts": "tsc --noEmit && tslint -p tsconfig.json --exclude '**/*.d.ts'",
     "lint-fix": "yarn lint-style --fix && yarn lint-es --fix && yarn lint-ts --fix ",
-    "stage": "export BUILD_STAGE=stage && node -r ts-node/register node_modules/.bin/react-static build --staging",
-    "build": "export BUILD_STAGE=prod && node -r ts-node/register node_modules/.bin/react-static build",
+    "build:stage": "export BUILD_STAGE=stage && node -r ts-node/register node_modules/.bin/react-static build --staging",
+    "build:prod": "export BUILD_STAGE=prod && node -r ts-node/register node_modules/.bin/react-static build",
+    "sync:stage": "aws s3 sync dist/ s3://stage-site-andretorgal-com/ --acl public-read",
+    "sync:prod": "aws s3 sync dist/ s3://prod-site-andretorgal-com/ --acl public-read",
+    "sync:statics:stage": "aws s3 sync ../andretorgal.statics/ s3://stage-statics-andretorgal-com/ --acl public-read",
+    "sync:statics:prod": "aws s3 sync ../andretorgal.statics/ s3://prod-statics-andretorgal-com/ --acl public-read",
     "analyze": "export BUILD_STAGE=prod && node -r ts-node/register node_modules/.bin/react-static build --analyze",
     "serve": "serve dist -p 3000",
     "storybook": "start-storybook -p 6006",
