add custom `robots.txt` to `dist/` folder depending on build stage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,12 +14,6 @@
   },
   "files.trimTrailingWhitespace": true,
   "files.insertFinalNewline": true,
-  "spellright.language": [
-    "en"
-  ],
-  "spellright.documentTypes": [
-    "markdown",
-    "latex",
-    "plaintext"
-  ]
+  "spellright.language": ["en"],
+  "spellright.documentTypes": ["markdown"]
 }
