load `ResponsiveImg` on scroll into view; load transition

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.8.14",
     "fs-extra-promise": "^1.0.1",
     "gray-matter": "^4.0.2",
+    "intersection-observer": "^0.7.0",
     "mdast-util-to-string": "^1.0.5",
     "node-sass": "^4.12.0",
     "postcss-preset-env": "^6.6.0",
@@ -33,6 +34,7 @@
     "postcss-utilities": "^0.8.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-intersection-observer": "^8.23.0",
     "react-router-dom": "^5.0.0",
     "react-static": "7.0.9",
     "react-static-plugin-react-router": "^7.0.9",
