chore: migrate tslint to eslint; improve stylelint integration; re-beautify;

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,36 @@
 {
-  "extends": "standard",
+  "env": {
+    "node": true
+  },
+  "parser": "@typescript-eslint/parser",
+  "extends": ["plugin:react/recommended", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "rules": {
-    "semi": ["error", "always"]
-  }
+    "semi": ["error", "always"],
+    "prettier/prettier": "error",
+    "react/prop-types": 0,
+    "@typescript-eslint/explicit-function-return-type": 0,
+    "@typescript-eslint/no-use-before-define": 0,
+    "@typescript-eslint/no-explicit-any": 0,
+    "typescript-eslint/no-use-before-define": 0
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "overrides": [
+    {
+      "files": ["*.js"],
+      "rules": {
+        "@typescript-eslint/...": "off"
+      }
+    }
+  ]
 }
