--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "serve-statics": "serve statics/ -p 3333",
     "start": "concurrently --kill-others 'yarn serve-statics' 'yarn dev'",
     "clean": "find . -name '*.scss.d.ts' -type f -delete && rm -rf artifacts/ dist/ tmp/",
-    "lint": "yarn lint-style && yarn lint-es && yarn lint-ts",
+    "lint": "yarn lint-style && yarn lint-es && yarn tsc",
     "lint-style": "stylelint 'src/**/*.scss' --syntax scss --cache --cache-location ./tmp/stylelint.cache",
-    "lint-es": "eslint --ext .js .react-static/ .webpack/ *.js --cache --cache-location ./tmp/eslint.cache",
-    "lint-ts": "tsc --noEmit && tslint -p tsconfig.json --exclude '**/*.d.ts'",
-    "lint-fix": "yarn lint-style --fix && yarn lint-es --fix && yarn lint-ts --fix ",
+    "lint-es": "eslint --ext .js,.ts,.tsx src/ .react-static/ .webpack/ --cache --cache-location ./tmp/eslint.cache",
+    "tsc": "tsc --noEmit",
+    "lint-fix": "yarn lint-style --fix && yarn lint-es --fix && yarn tsc",
     "build:stage": "export BUILD_STAGE=stage && node -r ts-node/register node_modules/.bin/react-static build --staging",
     "build:prod": "export BUILD_STAGE=prod && node -r ts-node/register node_modules/.bin/react-static build",
     "analyze": "export BUILD_STAGE=prod && node -r ts-node/register node_modules/.bin/react-static build --analyze",
@@ -86,25 +86,28 @@
     "@types/storybook__addon-links": "^3.3.4",
     "@types/storybook__react": "^4.0.1",
     "@types/webpack-dev-server": "^3.1.5",
+    "@typescript-eslint/eslint-plugin": "^2.1.0",
+    "@typescript-eslint/parser": "^2.1.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "9.x",
     "babel-loader": "^8.0.6",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^9.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint": "^6.3.0",
+    "eslint-config-prettier": "^6.2.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.2.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-standard": "^4.0.1",
+    "prettier": "^1.18.2",
     "react-docgen-typescript-loader": "^3.1.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "serve": "11.0.0",
     "stylelint": "^10.0.1",
     "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-config-standard": "^18.3.0",
-    "stylelint-scss": "^3.6.1",
-    "tslint": "^5.16.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^4.0.0"
+    "stylelint-scss": "^3.6.1"
   },
   "resolutions": {
     "react-static/webpack-dev-server": "3.2.1",
