--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
+  "workbench.colorCustomizations": {
+    "titleBar.activeBackground": "#9d1d1b",
+    "titleBar.activeForeground": "#f6f8f9",
+    "sideBar.background": "#2a353c",
+    "sideBar.foreground": "#c7cacc"
+  },
   "editor.tabSize": 2,
   "editor.insertSpaces": true,
   "files.exclude": {
@@ -15,5 +21,9 @@
   "files.trimTrailingWhitespace": true,
   "files.insertFinalNewline": true,
   "spellright.language": ["en"],
-  "spellright.documentTypes": ["markdown"]
+  "spellright.documentTypes": ["markdown"],
+  "stylelint.enable": true,
+  "prettier.disableLanguages": ["markdown"],
+  "eslint.packageManager": "yarn",
+  "prettier.singleQuote": true
 }
