--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
+    "baseUrl": ".",
+    "typeRoots": ["./src/declarations", "./node_modules/@types"],
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
@@ -20,5 +22,6 @@
     "esModuleInterop": true,
     "rootDirs": ["src"]
   },
-  "include": ["src/**/*", "src/node_modules"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "declarations"]
 }
